--- a/kufar-analogue/kufar-analogue/UI/ViewControllers/AddViewController/AddViewController.xib
+++ b/kufar-analogue/kufar-analogue/UI/ViewControllers/AddViewController/AddViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
@@ -53,7 +54,7 @@
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NIQ-ch-2xj">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                            <color key="tintColor" systemColor="systemPurpleColor"/>
+                                            <color key="tintColor" red="1" green="0.54087933160000001" blue="0.94689742249999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="plus.app.fill" catalog="system">
                                                 <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="35"/>
@@ -182,7 +183,7 @@
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nzi-QW-GU3">
                                     <rect key="frame" x="125.33333333333336" y="0.0" width="235.66666666666663" height="34.333333333333336"/>
-                                    <color key="tintColor" systemColor="systemPurpleColor"/>
+                                    <color key="tintColor" red="1" green="0.54087933157352275" blue="0.94689742253897735" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <menu key="menu" id="Udz-4R-gOd">
                                         <children>
                                             <command title="Item 1" id="DRN-ph-xKT"/>
@@ -205,7 +206,7 @@
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AA4-Ie-B17">
                                     <rect key="frame" x="111" y="0.0" width="250" height="34.333333333333336"/>
-                                    <color key="tintColor" systemColor="systemPurpleColor"/>
+                                    <color key="tintColor" red="1" green="0.54087933160000001" blue="0.94689742249999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <menu key="menu" id="1xc-7l-xRF">
                                         <children>
                                             <command title="Item 1" id="XKC-mE-B9V"/>
@@ -256,7 +257,7 @@
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="kI0-re-KbK"/>
                             </constraints>
-                            <color key="tintColor" systemColor="systemPurpleColor"/>
+                            <color key="tintColor" red="1" green="0.54087933160000001" blue="0.94689742249999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="filled" title="Add post"/>
                             <connections>
@@ -284,9 +285,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
