--- a/kufar-analogue/kufar-analogue/UI/ViewControllers/AddViewController/AddViewController.xib
+++ b/kufar-analogue/kufar-analogue/UI/ViewControllers/AddViewController/AddViewController.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
@@ -25,6 +24,7 @@
                 <outlet property="photoView" destination="NQm-5c-itj" id="DEF-lF-w3w"/>
                 <outlet property="priceTextField" destination="GgU-3Y-rHp" id="m3y-St-9gy"/>
                 <outlet property="totalAreaTextField" destination="TWo-Vg-mXS" id="sWG-Ej-96c"/>
+                <outlet property="totalNumberOfRoomsLabel" destination="UEP-gU-aSQ" id="37f-fU-x2t"/>
                 <outlet property="totalNumberOfRoomsStepper" destination="IzI-0A-elI" id="bhR-xP-S6K"/>
                 <outlet property="totalNumberOfRoomsTextField" destination="2To-Ce-nV6" id="aB4-Hw-x4s"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -36,7 +36,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Q20-iq-XyY">
-                    <rect key="frame" x="16" y="75" width="361" height="727"/>
+                    <rect key="frame" x="16" y="16" width="361" height="820"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fSM-iv-HAf">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="150"/>
@@ -235,7 +235,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ZkC-gl-X60">
-                            <rect key="frame" x="0.0" y="466.66666666666663" width="361" height="216"/>
+                            <rect key="frame" x="0.0" y="466.66666666666674" width="361" height="309"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uiA-jM-fe5">
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
@@ -244,7 +244,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Dcw-VQ-3f7">
-                                    <rect key="frame" x="0.0" y="20.333333333333371" width="361" height="195.66666666666666"/>
+                                    <rect key="frame" x="0.0" y="20.333333333333314" width="361" height="288.66666666666669"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <color key="textColor" systemColor="labelColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -253,7 +253,7 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jBs-Qi-hn7">
-                            <rect key="frame" x="0.0" y="692.66666666666663" width="361" height="34.333333333333371"/>
+                            <rect key="frame" x="0.0" y="785.66666666666663" width="361" height="34.333333333333371"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="kI0-re-KbK"/>
                             </constraints>
